codigo-fonte/cadastro/cadastro.css
:root {
  --project-primary: #8d8d8d;
  --project-01: #d9d9d9;
  --project-02: #dddddd;
  --project-red: #c10000;
  --project-gradient-01: #292929;
  --project-gradient-02: #b4b4b4;
}

html {
  height: 100%;
  width: 100%;
}

body {
  font-family: "Inter";
  background-image: linear-gradient(
    var(--project-gradient-01),
    var(--project-gradient-02)
  );
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--project-01);
}

.header {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 30px;
}

.title {
  font-weight: bold;
  font-size: 128px;
}

.title-01 {
  color: var(--project-01);
}

.title-02 {
  color: var(--project-red);
}

.sub-title {
  font-weight: bold;
  font-size: 36px;
  color: var(--project-01);
  display: flex;
}

.box {
  display: block;
  width: 36px;
  height: 36px;
  background-color: var(--project-red);
  text-align: end;
}

.form {
  width: 100%;
  height: 100%;
  margin-top: 50px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.send-image,
.inputs {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  gap: 50px;
}

.input-body {
  width: 463px;
  height: 67px;
  display: flex;
}

input {
  width: calc(100% - 67px);
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  padding-left: 20px;
  outline: none !important;
  border: 2px solid var(--project-01);
  font-size: 32px;
  font-weight: bold;
  color: var(--project-01);
}

.action {
  width: 67px;
  height: 67px;
  background-color: var(--project-red);
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.action img {
  fill: white;
}

.image-selector {
  width: 463px;
  height: 430px;
}

.image-placeholder {
  width: 100%;
  height: 371px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--project-01);
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.image-placeholder img {
  max-width: 100%;
  max-height: 371px;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.image-btn {
  width: 100%;
  height: 59px;
  background-color: var(--project-red);
  font-size: 32px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.user-role {
  width: 463px;
  height: 67px;
  background-color: var(--project-02);
  color: var(--project-primary);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.user-role-title {
  font-size: 32px;
  font-weight: bold;
  margin-left: 20px;
}

.radio-label{
    font-weight: bold;
    font-size: 16px;
}

.radios {
  display: flex;
  gap: 10px;
  margin-right: 20px;
}

input[type="radio"] {
    transform: scale(1.2);
    margin-bottom: 1px;
}

.radio-input {
  width: 85px;
  display: flex;
  align-items: center;
}

.save-actions {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
}

.save-actions button {
  width: 251px;
  height: 66px;
  background-color: var(--project-red);
  border-radius: 10px;
  border: none;
  font-size: 32px;
  font-weight: bold;
  color: var(--project-01);
  cursor: pointer;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

